--- a/app/views/todos/index.html.erb
+++ b/app/views/todos/index.html.erb
@@ -4,6 +4,7 @@
     <div class="card-body">
       <h5 class="card-title"><%= todo.description %></h5>
       <p class="card-text"><%= todo.completed %></p>
+      <p><%= link_to  "Editar", todo %></p>
     </div>
   </div>
 <% end %>
