--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,9 @@
   </head>
 
   <body>
-    <div class="container">
+
+    <%= render 'layouts/navbar' %>
+    <div class="container mt-3">
       <%= yield %>
     </div>
   </body>
