--- a/app/views/todos/index.html.erb
+++ b/app/views/todos/index.html.erb
@@ -1,16 +1,17 @@
 <% @todos.each do |todo| %>
-  <div class="card text-white bg-secondary mb-3" style="max-width: 18rem;">
+  <div class="card text-white bg-secondary mb-6" style="max-width: 18rem">
     <div class="card-header"><%= todo.id %></div>
     <div class="card-body">
       <h5 class="card-title"><%= todo.description %></h5>
       <p class="card-text"><%= todo.completed %></p>
+      <p><%= link_to  "Show", todo_path(todo) %></p>
       <p><%= link_to  "Editar", todo_edit_path(todo) %></p>
       <p><%= link_to  "Eliminar", todo_destroy_path(todo), method: :delete %></p>
       <p><%= link_to  "Completado", todo_complete_path(todo) %></p>
     </div>
   </div>
+  <br>
 <% end %>
-
 <button type="button" class="btn btn-primary"><%= link_to  "Crear nuevo ToDo", todos_new_path %></button>
 
 
