--- a/app/views/todos/show.html.erb
+++ b/app/views/todos/show.html.erb
@@ -1,6 +1,26 @@
-<div class="card text-white bg-primary mb-3" style="max-width: 18rem;">
-    <div class="card-body">
-      <h5 class="card-title"><%= @todo.description %></h5>
-      <p class="card-text"><%= @todo.completed %></p>
-    </div>
+<h1> ToDo Show </h1>
+
+<div class="row">
+  <div class="col-md-8">
+    <% if @todo.completed == false %>
+      <div class="card text-white border-danger">
+        <ul class="list-group list-group-flush">
+          <li class="list-group-item d-flex justify-content-between align-items-center">
+            <p class="card-text"><%= @todo.description %></p>
+            <p> Non Completed </p>
+          </li>
+        </ul>
+      </div> 
+    <% else %>
+      <div class="card text-white border-success">
+        <ul class="list-group list-group-flush">
+          <li class="list-group-item d-flex justify-content-between align-items-center">
+            <p class="card-text"><%= @todo.description %></p>
+            <p> Completed </p>
+          </li>
+        </ul>
+      </div>
+    <% end %>  
+    <br>
   </div>
+</div>
