--- a/app/views/todos/index.html.erb
+++ b/app/views/todos/index.html.erb
@@ -18,7 +18,7 @@
       </ul>
     </div>
     <br>
-  <button type="button" class="btn btn-primary"><%= link_to  "Crear nuevo ToDo", todos_new_path %></button>
+  <%= link_to "New ToDo", todos_new_path, class: "btn btn-primary" %>
   </div>
 </div>
 
